--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--HEADER WITH LINK TO CONTEXT-->
     <div class="header">
         <h1><span class="seo">Horiseon</span></h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,7 +23,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </div>
 
     <!-- CONTENT -->
@@ -54,7 +54,7 @@
 
     <!-- BENEFITS-->
 
-    <div class="benefits">
+    <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./develop/assets/images/lead-generation.png"></img>
@@ -76,7 +76,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
 
     <!--Footer-->
     <div class="footer">
