--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--HEADER WITH LINK TO CONTEXT-->
-    <div class="header">
+    <header>
         <h1><span class="seo">Horiseon</span></h1>
         <nav>
             <ul>
@@ -24,67 +24,73 @@
                 </li>
             </ul>
         </nav>
-    </div>
+    </header>
 
-    <!-- CONTENT -->
-    <div class="hero"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./develop/assets/images/search-engine-optimization.jpg" class="float-left"><img>
+            <!--I had to get rid of the hero class in order to create an  and used the <img> tag so that my alternate text would work,
+                 i also moved the style from external to inline-->
+    <img src="../Jruuuu.github.io/develop/assets/images/digital-marketing-meeting.jpg" alt="background image of header is a group of co-workers solving a problem together"
+    
+            style="height:800px; width: 100%; margin-bottom: 25px; background-size: cover;background-position: center;">
+           <!--Article- Defines independent, self-contained content-->
+    <article class="content">
+        <section id="search-engine-optimization" class="search-engine-optimization">
+            <!--When adding an ALT text to an image, its good to be as descriptive as possible, for accessiblity-->
+
+            <img src="./develop/assets/images/search-engine-optimization.jpg" alt="An image of  journal in the center, and in the center is S.E.O in the middle with pictures that associate with Search search-engine-optimization" class="float-left"><img>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section id="online-reputation-management" class="online-reputation-management">
             <img src="./develop/assets/images/online-reputation-management.jpg" class="float-right"></img>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./develop/assets/images/social-media-marketing.jpg" class="float-left"></img>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </article>
 
-    <!-- BENEFITS-->
+    <!-- BENEFITS: I used the Aside Tag to identify this will be aside of the website. -->
 
     <aside class="benefits">
-        <div class="benefit-lead">
+        <aside class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./develop/assets/images/lead-generation.png"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./develop/assets/images/brand-awareness.png"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./develop/assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </aside>
     </aside>
 
-    <!--Footer-->
-    <div class="footer">
+    <!--Footer bottom of the page-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
