--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!--HEADER WITH LINK TO CONTEXT-->
+    <!--Header contains the the navagation which is why i used the tag nav-->
     <header>
         <h1><span class="seo">Horiseon</span></h1>
         <nav>
@@ -43,14 +43,14 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./develop/assets/images/online-reputation-management.jpg" class="float-right"></img>
+            <img src="./develop/assets/images/online-reputation-management.jpg" alt="an image of a laptop screen with a bar graph with repution increasing" class="float-right"></img>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./develop/assets/images/social-media-marketing.jpg" class="float-left"></img>
+            <img src="./develop/assets/images/social-media-marketing.jpg" alt="an image with a group of people discussing social media presence" class="float-left"></img>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -63,21 +63,21 @@
     <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./develop/assets/images/lead-generation.png"></img>
+            <img src="./develop/assets/images/lead-generation.png" alt="An all black image of a half a gear going into a funnel becoming money"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
         <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./develop/assets/images/brand-awareness.png"></img>
+            <img src="./develop/assets/images/brand-awareness.png" alt="An all black image of a human with bulb as the head"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
         <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./develop/assets/images/cost-management.png"></img>
+            <img src="./develop/assets/images/cost-management.png" alt="An all black image of half a gear with money coins around the bottom"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
