made final changes to html and css style

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li>
+                    <!--had to link #search-engine-optimization too <section id>-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
