--- a/index.html
+++ b/index.html
@@ -62,27 +62,27 @@
     <!-- BENEFITS: I used the Aside Tag to identify this will be aside of the website. -->
 
     <aside class="benefits">
-        <aside class="benefit-lead">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./develop/assets/images/lead-generation.png" alt="An all black image of a half a gear going into a funnel becoming money"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </aside>
-        <aside class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./develop/assets/images/brand-awareness.png" alt="An all black image of a human with bulb as the head"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </aside>
-        <aside class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./develop/assets/images/cost-management.png" alt="An all black image of half a gear with money coins around the bottom"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </aside>
+        </section>
     </aside>
 
     <!--Footer bottom of the page-->
