--- a/index.html
+++ b/index.html
@@ -2,96 +2,93 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./develop/assets/css/style.css">
-    <title>Horiseon: Search Engine Optimization, Online Reputation Management, Social Media Marketing</title>
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ABOUT</title>
 </head>
 
 <body>
-    <!--Header contains the the navagation which is why i used the tag nav-->
-    <header>
-        <h1><span class="seo">Horiseon</span></h1>
-        <nav>
-            <ul>
-                <li>
-                    <!--had to link #search-engine-optimization too <section id>-->
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+  <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!--have to add style to overide color bg for navbar-brand-->
+    <a class="navbar-brand" href="index.html" style="color:white">ENRILO M. UGALDE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link" href="contact.html">CONTACT </a>
+        <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+        <!--active class make sure user is in the current and active link-->
+        <a class="nav-link active" href="index.html">ABOUT <span class="sr-only">(current)</span></a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+      </div>
+    </div>
+  </nav>
 
-            <!--I had to get rid of the hero class in order to create an  and used the <img> tag so that my alternate text would work,
-                 i also moved the style from external to inline-->
-    <img src="../Jruuuu.github.io/develop/assets/images/digital-marketing-meeting.jpg" alt="background image of header is a group of co-workers solving a problem together"
-    
-            style="height:800px; width: 100%; margin-bottom: 25px; background-size: cover;background-position: center;">
-           <!--Article- Defines independent, self-contained content-->
-    <article class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
-            <!--When adding an ALT text to an image, its good to be as descriptive as possible, for accessiblity-->
+  <!--CONTENT-->
+  <div class="container col-md-6">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>About Me</h1>
+        <hr>
+        <div class="row">
+  
+          <p>
+            <img src="assets/images/IMG_2035.jpg" alt="Enrilo Ugalde Profile" class="float-left mr-3"> Lorem ipsum dolor
+            sit amet, consectetur adipisicing elit. Laudantium, beatae eveniet qui quas ipsa officia magnam molestias
+            vel
+            quod, officiis esse. Accusantium, esse ut labore aperiam rem ipsum voluptas iure soluta nam consectetur
+            perferendis exercitationem eligendi incidunt ipsam repudiandae odio dolores debitis recusandae id nemo
+            adipisci fugiat voluptatum aliquid.
+            Debitis suscipit deserunt molestias? Deleniti maxime corrupti, quis delectus inventore ea nulla impedit nisi
+            tenetur excepturi voluptates reprehenderit deserunt fugiat!
+          </p>
+        </div>
+        <div class="row">
+          <!--ADDED SOCIAL MEDIA LINKS-->
+          <a href="https://www.linkedin.com/in/enrilo-ugalde" class="btn btn-primary btn-primary active" role="button"
+            aria-pressed="true" data-toggle="button">Linkedin
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-            <img src="./develop/assets/images/search-engine-optimization.jpg" alt="An image of  journal in the center, and in the center is S.E.O in the middle with pictures that associate with Search search-engine-optimization" class="float-left"><img>
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </section>
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./develop/assets/images/online-reputation-management.jpg" alt="an image of a laptop screen with a bar graph with repution increasing" class="float-right"></img>
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </section>
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./develop/assets/images/social-media-marketing.jpg" alt="an image with a group of people discussing social media presence" class="float-left"></img>
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </section>
-    </article>
-
-    <!-- BENEFITS: I used the Aside Tag to identify this will be aside of the website. -->
-
-    <aside class="benefits">
-        <section class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./develop/assets/images/lead-generation.png" alt="An all black image of a half a gear going into a funnel becoming money"></img>
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </section>
-        <section class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./develop/assets/images/brand-awareness.png" alt="An all black image of a human with bulb as the head"></img>
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </section>
-        <section class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./develop/assets/images/cost-management.png" alt="An all black image of half a gear with money coins around the bottom"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </section>
-    </aside>
-
-    <!--Footer bottom of the page-->
-    <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </footer>
 </body>
+
+<!--FOOTER  -->
+<footer class="footer text-center fixed-bottom bg-success mt-auto ">
+  <div class="mt-1 navbar-dark bg-dark">
+    <footer class="footer-copyright py-3 my-auto">&#169 Copyright</footer>
+  </div>
+</footer>
+
+
+
+
+
+
+<!-- is required for drop menus -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
 
 </html>
