made changes to portfolio.html add actual screenshots and actually links to deployed work

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,29 +41,36 @@
     </div>
     <!-- FIVE PORTFOLIO PICS-->
     <div class="row">
-      <div class="col-md-6 img-fluid" alt="Responsive image">
-        <img src="https://picsum.photos/350/350/?blur=10">
+      <div class="col-md-6 img-fluid">
+        <a href="https://jruuuu.github.io/pwdeveloper/"><img src="assets\images\pwGenImg.JPG" alt="PW GENERATOR"></a>
+        <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/pwdeveloper" class="">Github PW Developer Repo</button></a>      
       </div>
-      <div class="col-md-6 img-fluid" alt="Responsive image">
-        <img src="https://picsum.photos/350/350/?blur=5">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 img-fluid" alt="Responsive image">
-        <img src="https://picsum.photos/350/350/?blur=4">
-      </div>
-      <div class="col-md-6 img-fluid" alt="Responsive image">
-        <img src="https://picsum.photos/350/350/?blur=2">
+     
+      <div class="col-md-6 img-fluid">
+        <a href="https://jruuuu.github.io/popquery/"><img src="assets/images/popqueryimg.JPG" alt="POP QUERY"></a>
+        <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/popquery" class="">Github Pop Query Repo</button></a>      
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 img-fluid" alt="Responsive image">
-        <img src="https://picsum.photos/350/350/?blur=2">
+      <div class="col-md-6 img-fluid">
+        <a href="https://jruuuu.github.io/CyClickGrind/"><img src="assets/images/cyclickgrindimg.JPG" alt="CyCLICKGrind"></a>
+        <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/CyClickGrind" class="">Github CyClickGrind Repo</button></a>      
+        </div>
+      
+      <div class="col-md-6 img-fluid">
+        <a href="https://jruuuu.github.io/storm/"><img src="assets/images/stormimg.JPG" alt="Storm DashboardScreenShot"></a>
+        <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/storm" class="">Github STORM Repo</button></a>      
       </div>
-
     </div>
+    <div class="row">
+      <div class="col-md-6 img-fluid">
+        <a href="https://jruuuu.github.io/OUTDoorsy/"><img src="assets/images/OUTDoorsyimg.JPG" alt="Storm DashboardScreenShot"></a>
+        <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/OUTDoorsy" class="">Github OUTDoorsy Repo</button></a>      
+      </div>
+    </div>
+  </div>
 
-    <!-- is required for drop menus -->
+      <!-- is required for drop menus -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"></script>
