--- a/index.html
+++ b/index.html
@@ -42,14 +42,9 @@
         <div class="row">
   
           <p>
-            <img src="assets/images/IMG_2035.jpg" alt="Enrilo Ugalde Profile" class="float-left mr-3"> Lorem ipsum dolor
-            sit amet, consectetur adipisicing elit. Laudantium, beatae eveniet qui quas ipsa officia magnam molestias
-            vel
-            quod, officiis esse. Accusantium, esse ut labore aperiam rem ipsum voluptas iure soluta nam consectetur
-            perferendis exercitationem eligendi incidunt ipsam repudiandae odio dolores debitis recusandae id nemo
-            adipisci fugiat voluptatum aliquid.
-            Debitis suscipit deserunt molestias? Deleniti maxime corrupti, quis delectus inventore ea nulla impedit nisi
-            tenetur excepturi voluptates reprehenderit deserunt fugiat!
+            <img src="assets/images/IMG_2035.jpg" alt="Enrilo Ugalde Profile" class="float-left mr-3">A computer geek at heart, my interest in the PC world began when my parents introduced me to my first computer, MSDOS. Since then I have been fixing, repairing, dissecting the technical side of a personal computer.  As my 15 year mark working in administration for the Government comes, my wife sparked an interest in the web development side of technology. Today, I am on  path to become a Full Stack Developer in which I will be proficient in HTML, CSS, JAVASCRIPT, API, NODE.JS and many more evolving languages in this field.  Although we are in an environment where we are secluded, I am excited to work with a creative team that will make the world a better place one code, script, or gesture at a time. 
+            “The mind is like an Umbrella, it only works when it is open” - Sir James Jeans
+            
           </p>
         </div>
         <div class="row">
@@ -57,6 +52,7 @@
           <a href="https://www.linkedin.com/in/enrilo-ugalde" class="btn btn-primary btn-primary active" role="button"
             aria-pressed="true" data-toggle="button">Linkedin
           </a>
+          <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/" class="">Github</button>
         </div>
       </div>
     </div>
