--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
   
           <p>
             <img src="assets/images/IMG_2035.jpg" alt="Enrilo Ugalde Profile" class="float-left mr-3">A computer geek at heart, my interest in the PC world began when my parents introduced me to my first computer, MSDOS. Since then I have been fixing, repairing, dissecting the technical side of a personal computer.  As my 15 year mark working in administration for the Government comes, my wife sparked an interest in the web development side of technology. Today, I am on  path to become a Full Stack Developer in which I will be proficient in HTML, CSS, JAVASCRIPT, API, NODE.JS and many more evolving languages in this field.  Although we are in an environment where we are secluded, I am excited to work with a creative team that will make the world a better place one code, script, or gesture at a time. 
-            “The mind is like an Umbrella, it only works when it is open” - Sir James Jeans
-            
-          </p>
-        </div>
-        <div class="row">
-          <!--ADDED SOCIAL MEDIA LINKS-->
-          <a href="https://www.linkedin.com/in/enrilo-ugalde" class="btn btn-primary btn-primary active" role="button"
+            “The mind is like an Umbrella, it only works when it is open” - Sir James Jeans            
+            <div class="card" style="width: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Contact Information</h5>
+                <h6 class="card-subtitle mb-2 text-muted">ENRILO M. UGALDE</h6>
+                <p class="card-text">EMAIL: <a style="color: blue;" href="ENRILOUGALDE@GMAIL.COM">ENRILOUGALDE@GMAIL.COM</a><br>
+                Phone#: 619-961-5190</p>
+                <a href="https://www.linkedin.com/in/enrilo-ugalde" class="btn btn-primary btn-primary active" role="button"
             aria-pressed="true" data-toggle="button">Linkedin
           </a>
           <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/" class="">Github</button>
+              </div>
+            </div>
+          </p>
         </div>
       </div>
     </div>
