made changes to portfolio details added title and small deets

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,28 +42,38 @@
     <!-- FIVE PORTFOLIO PICS-->
     <div class="row">
       <div class="col-md-6 img-fluid">
+      <h3>Password Developer</h3>
+      <hr>
         <a href="https://jruuuu.github.io/pwdeveloper/"><img src="assets\images\pwGenImg.JPG" alt="PW GENERATOR"></a>
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/pwdeveloper" class="">Github PW Developer Repo</button></a>      
       </div>
      
       <div class="col-md-6 img-fluid">
+        <h3>Pop QUERY</h3>
+        <hr>
         <a href="https://jruuuu.github.io/popquery/"><img src="assets/images/popqueryimg.JPG" alt="POP QUERY"></a>
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/popquery" class="">Github Pop Query Repo</button></a>      
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 img-fluid">
+        <h3>CyCLICKGrind</h3>
+        <hr>
         <a href="https://jruuuu.github.io/CyClickGrind/"><img src="assets/images/cyclickgrindimg.JPG" alt="CyCLICKGrind"></a>
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/CyClickGrind" class="">Github CyClickGrind Repo</button></a>      
         </div>
       
       <div class="col-md-6 img-fluid">
+        <h3>STORM</h3>
+        <hr>
         <a href="https://jruuuu.github.io/storm/"><img src="assets/images/stormimg.JPG" alt="Storm DashboardScreenShot"></a>
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/storm" class="">Github STORM Repo</button></a>      
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 img-fluid">
+        <h3>OUTDoorsy</h3>
+        <hr>
         <a href="https://jruuuu.github.io/OUTDoorsy/"><img src="assets/images/OUTDoorsyimg.JPG" alt="Storm DashboardScreenShot"></a>
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/OUTDoorsy" class="">Github OUTDoorsy Repo</button></a>      
       </div>
