--- a/contact.html
+++ b/contact.html
@@ -42,23 +42,21 @@
       <div class="form-group col-md-12">
         <label for="NameInput">Name</label>
         <!--NAME INPUT-->
-        <input type="Name" class="form-control" id="NameInput" placeholder="Name">
+        <input type="Name" class="form-control" id="NameInput" placeholder="ENRILO M. UGALDE">
       </div>
       <!--EMAIL-->
       <div class="form-group col-md-12">
         <label for="EmailInput">Email</label>
         <!--EMAIL INPUT-->
-        <input type="email" class="form-control" id="EmailInput" placeholder="Email">
+        <input type="email" class="form-control" id="EmailInput" placeholder="ENRILOUGALDE@GMAIL.COM">
       </div>
       <div class="form-group col-md-12">
         <!--MESSAGE-->
         <label for="MessageArea1">Message</label>
         <!--MESSAGE TEXT AREA-->
-        <textarea class="form-control" id="MessageArea1" rows="3" placeholder="Message"></textarea>
+        <textarea class="form-control" id="MessageArea1" rows="3" placeholder="Hello, I would love to meet you!"></textarea>
       </div>
-      <!--SUBMIT BUTTON-->
-      <button class="btn btn-info" type="submit">Submit form</button>
-    </form>
+      </form>
   </div>
 
 
