--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </nav>
 
   <!--CONTENT-->
-  <div class="container col-md-6">
+  <div class="container col-md-10">
     <div class="row">
       <div class="col-md-12">
         <h1>About Me</h1>
@@ -42,7 +42,7 @@
         <div class="row">
   
           <p>
-            <img src="assets/images/IMG_2035.jpg" alt="Enrilo Ugalde Profile" class="float-left mr-3" style= "opacity: 1.0;">A computer geek at heart, my interest in the PC world began when my parents introduced me to my first computer, MSDOS. Since then I have been fixing, repairing, dissecting the technical side of a personal computer.  As my 15 year mark working in administration for the Government comes, my wife sparked an interest in the web development side of technology. Today, I am on  path to become a Full Stack Developer in which I will be proficient in HTML, CSS, JAVASCRIPT, API, NODE.JS and many more evolving languages in this field.  Although we are in an environment where we are secluded, I am excited to work with a creative team that will make the world a better place one code, script, or gesture at a time.             
+            <img src="assets/images/IMG_2035.jpg" alt="Enrilo Ugalde Profile" class="float-left mr-3" style= "opacity:inherit " >  A computer geek at heart, my interest in the PC world began when my parents introduced me to my first computer, MSDOS. Since then I have been fixing, repairing, dissecting the technical side of a personal computer.  As my 15 year mark working in administration for the Government comes, my wife sparked an interest in the web development side of technology. Today, I am on  path to become a Full Stack Developer in which I will be proficient in HTML, CSS, JAVASCRIPT, API, NODE.JS and many more evolving languages in this field.  Although we are in an environment where we are secluded, I am excited to work with a creative team that will make the world a better place one code, script, or gesture at a time.             
             
            
 
