made changes to footer navbar moved contact info

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
 <body>
   <title>PORTFOLIO</title>
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!--have to add style to overide color bg for navbar-brand-->
-    <a class="navbar-brand" href="index.html" style="color:white">ENRILO M. UGALDE</a>
+    <a class="navbar-brand" href="index.html"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -93,9 +93,16 @@
 </body>
 
 <!--FOOTER  -->
-<footer class="footer text-center fixed-bottom bg-success mt-auto">
-  <div class="mt-1 navbar-dark bg-dark">
-    <footer class="footer-copyright py-3 my-auto">&#169 Copyright</footer>
+<footer class="footer text-center fixed-bottom mt-auto ">
+  <div class="mt-1 navbar-dark bg-light">
+    <footer class="footer-copyright my-auto bg-dark">&#169 Copyright
+      <a class="navbar-brands" href="https://github.com/Jruuuu/">
+        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="" loading="lazy">
+      </a>
+      <a class="navbar-brands" href="https://www.linkedin.com/in/enrilo-ugalde">
+        <img src="assets/images/LI-In-Bug.png" alt="" loading="lazy">
+      </a>
+    </footer>
   </div>
 </footer>
 
