made changes to footer, added instagram link and added alt

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,10 +97,13 @@
   <div class="mt-1 navbar-dark bg-light">
     <footer class="footer-copyright my-auto bg-dark">&#169 Copyright
       <a class="navbar-brands" href="https://github.com/Jruuuu/">
-        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="" loading="lazy">
+        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="git hub icon" loading="lazy">
       </a>
       <a class="navbar-brands" href="https://www.linkedin.com/in/enrilo-ugalde">
-        <img src="assets/images/LI-In-Bug.png" alt="" loading="lazy">
+        <img src="assets/images/LI-In-Bug.png" alt="linkedin icon" loading="lazy">
+      </a>
+      <a class="navbar-brands" href="https://www.instagram.com/jruuuu/">
+        <img src="assets/images/Instagram.png" alt="instagram icon" loading="lazy">
       </a>
     </footer>
   </div>
