--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
     <!--have to add style to overide color bg for navbar-brand-->
     <a class="navbar-brand" href="index.html"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -39,7 +39,7 @@
       <div class="col-md-12">
         <h1>Enrilo M. Ugalde</h1>
         <hr>
-        Location: San Diego and Los Angeles | Phone# 619-961-5190 | EMAIL: ENRILOUGALDE@GMAIL.COM
+        <b>Location: </b>San Diego and Los Angeles | <b>Phone# </b> 619-961-5190 | <b>EMAIL: </b> ENRILOUGALDE@GMAIL.COM
         <br>
         <div class="row">
   
@@ -61,16 +61,16 @@
 </body>
 
 <!--FOOTER  -->
-<footer class="footer text-center fixed-bottom mt-auto ">
+<footer class="footer text-center fixed-bottom mt-auto bg-info ">
   <div class="mt-1 navbar-dark bg-light">
-    <footer class="footer-copyright my-auto bg-dark">&#169 Copyright
-      <a class="navbar-brands" href="https://github.com/Jruuuu/">
+    <footer class="footer-copyright my-auto bg-info">&#169 Copyright
+      <a class="navbar-brand bg-info" href="https://github.com/Jruuuu/">
         <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github icon" loading="lazy">
       </a>
-      <a class="navbar-brands" href="https://www.linkedin.com/in/enrilo-ugalde">
+      <a class="navbar-brand bg-info" href="https://www.linkedin.com/in/enrilo-ugalde">
         <img src="assets/images/LI-In-Bug.png" alt="linkedin icon" loading="lazy">
       </a>
-      <a class="navbar-brands" href="https://www.instagram.com/jruuuu/">
+      <a class="navbar-brand bg-info" href="https://www.instagram.com/jruuuu/">
         <img src="assets/images/Instagram.png" alt="instagram icon" loading="lazy">
       </a>
     </footer>
