--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
   <title>PORTFOLIO</title>
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
     <!--have to add style to overide color bg for navbar-brand-->
     <a class="navbar-brand" href="index.html"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -40,7 +40,7 @@
       <hr>
     </div>
     <!-- FIVE PORTFOLIO PICS-->
-    <div class="row">
+    <div class="row portfolio">
       <div class="col-md-6 img-fluid">
       <h3>Password Developer</h3>
       <hr>
@@ -55,7 +55,7 @@
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/popquery" class="">Github Pop Query Repo</button></a>      
       </div>
     </div>
-    <div class="row">
+    <div class="row portfolio">
       <div class="col-md-6 img-fluid">
         <h3>CyCLICKGrind</h3>
         <hr>
@@ -70,7 +70,7 @@
         <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false"><a href="https://github.com/Jruuuu/storm" class="">Github STORM Repo</button></a>      
       </div>
     </div>
-    <div class="row">
+    <div class="row portfolio">
       <div class="col-md-6 img-fluid">
         <h3>OUTDoorsy</h3>
         <hr>
@@ -93,20 +93,18 @@
 </body>
 
 <!--FOOTER  -->
-<footer class="footer text-center fixed-bottom mt-auto ">
+<footer class="footer text-center fixed-bottom mt-auto bg-info ">
   <div class="mt-1 navbar-dark bg-light">
-    <footer class="footer-copyright my-auto bg-dark">&#169 Copyright
-      <a class="navbar-brands" href="https://github.com/Jruuuu/">
-        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="git hub icon" loading="lazy">
+    <footer class="footer-copyright my-auto bg-info">&#169 Copyright
+      <a class="navbar-brand bg-info" href="https://github.com/Jruuuu/">
+        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github icon" loading="lazy">
       </a>
-      <a class="navbar-brands" href="https://www.linkedin.com/in/enrilo-ugalde">
+      <a class="navbar-brand bg-info" href="https://www.linkedin.com/in/enrilo-ugalde">
         <img src="assets/images/LI-In-Bug.png" alt="linkedin icon" loading="lazy">
       </a>
-      <a class="navbar-brands" href="https://www.instagram.com/jruuuu/">
+      <a class="navbar-brand bg-info" href="https://www.instagram.com/jruuuu/">
         <img src="assets/images/Instagram.png" alt="instagram icon" loading="lazy">
       </a>
     </footer>
-  </div>
-</footer>
 
 </html>
