--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
   <title>PORTFOLIO</title>
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
     <!--have to add style to overide color bg for navbar-brand-->
     <a class="navbar-brand" href="index.html"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
