update index page, added aboutme page  and make changes to layouts

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <!--active class make sure user is in the current and active link-->
         <a class="nav-link active" href="contact.html">CONTACT <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
-        <a class="nav-link" href="index.html">ABOUT </a>
+        <a class="nav-link" href="aboutme.html">ABOUT </a>
 
       </div>
     </div>
