--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="contact.html">CONTACT </a>
         <!--active class make sure user is in the current and active link-->
         <a class="nav-link active" href="portfolio.html">PORTFOLIO <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="index.html">ABOUT</a>
+        <a class="nav-link" href="aboutme.html">ABOUT</a>
 
       </div>
     </div>
@@ -35,8 +35,8 @@
 
   <!--PORTFOLIO-->
   <div class="container">
+    <h1>PORTFOLIO</h1>
     <div class="row">
-      <h1>PORTFOLIO</h1>
       <hr>
     </div>
     <!-- FIVE PORTFOLIO PICS-->
