made changes to menu and changed contact to resume

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ABOUT</title>
+  <title>WELCOME</title>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         <div class="dropdown-content">
           <a  href="aboutme.html">ABOUT ME </a>
           <a href="portfolio.html">PORTFOLIO</a>
-          <a href="contact.html">CONTACT</a>
+          <a href="resume.html">RESUME</a>
         </div>
       </button>
     </div>
