--- a/resume.html
+++ b/resume.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-  <title>CONTACT</title>
+  <title>RESUME</title>
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
     <!--have to add style to overide color bg for navbar-brand-->
-    <a class="navbar-brand" href="index.html" ></a>
+    <a class="navbar-brand" href="index.html">JR</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,9 +25,9 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
         <!--active class make sure user is in the current and active link-->
-        <a class="nav-link active" href="contact.html">CONTACT <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="resume.html">RESUME<span class="sr-only">(current)</span></a>
         <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
-        <a class="nav-link" href="aboutme.html">ABOUT </a>
+        <a class="nav-link" href="aboutme.html">ABOUT</a>
 
       </div>
     </div>
@@ -35,7 +35,7 @@
   <!--CONTACT FORM-->
   <div class="container col-md-6">
     <!--HEADER NEEDS TO SAY CONTACT-->
-    <h1>CONTACT</h1>
+    <h1>RESUME</h1>
     <hr>
     <form>
       <!--NAME-->
