--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,14 @@
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
     <!--have to add style to overide color bg for navbar-brand-->
-    <a class="navbar-brand" href="index.html"></a>
+    <a class="navbar-brand" href="index.html">JR</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
-        <a class="nav-link" href="contact.html">CONTACT </a>
+        <a class="nav-link" href="resume.html">RESUME</a>
         <!--active class make sure user is in the current and active link-->
         <a class="nav-link active" href="portfolio.html">PORTFOLIO <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="aboutme.html">ABOUT</a>
