--- a/resume.html
+++ b/resume.html
@@ -33,11 +33,11 @@
     </div>
   </nav>
   <!--CONTACT FORM-->
-  <div class="container col-md-6 col-sm-12">
+  <div class="container col-md-6">
     <!--HEADER NEEDS TO SAY CONTACT-->
     <h1>RESUME</h1>
     <hr>
-    <iframe src="assets/images/Enrilo_M_Ugalde_Resume.pdf" style="width:800px; height:1000px; align-content: center" frameborder="0"></iframe>
+    <iframe src="assets/images/Enrilo_M_Ugalde_Resume.pdf" style="width:800px; height:1000px;" frameborder="0"></iframe>
       
     <!-- <form> -->
       <!--NAME-->
