compressed pictures and made changes to links for that open new tabs

--- a/index.html
+++ b/index.html
@@ -1,98 +1,60 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang=en-us>
 
 <head>
-  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WELCOME</title>
+    <link rel=stylesheet href=https://meyerweb.com/eric/tools/css/reset/reset.css>
+    <link rel=stylesheet href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css
+        integrity=sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z crossorigin=anonymous>
+    <link rel=stylesheet href=assets/style.css>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel=stylesheet>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width, initial-scale=1.0">
+    <title>WELCOME</title>
 </head>
 
 <body>
-  <!--NAVGATION BAR added ml-auto to have link on the right of the page-->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
-    <!--have to add style to overide color bg for navbar-brand-->
-    <!-- <a class="navbar-brand" href="index.html"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        <a class="nav-link" href="contact.html">CONTACT </a>
-        <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
-        active class make sure user is in the current and active link
-        <a class="nav-link active" href="aboutme.html">ABOUT <span class="sr-only">(current)</span></a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-      </div>
-    </div>-->
-  </nav>
-  <!--CONTENT-->
-  <div class = "container welcome">
-    <h2>Hello! I'm<span>JR,</span></h2>
-    <span class ="text2">Take a Look Around</span>
-    <br>
-    <!--GLASSES ICON-->
-    <div class="dropdown">
-      <button class="dropbtn">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-eyeglasses"
-          viewBox="0 0 16 16">
-          <path
-            d="M4 6a2 2 0 1 1 0 4 2 2 0 0 1 0-4zm2.625.547a3 3 0 0 0-5.584.953H.5a.5.5 0 0 0 0 1h.541A3 3 0 0 0 7 8a1 1 0 0 1 2 0 3 3 0 0 0 5.959.5h.541a.5.5 0 0 0 0-1h-.541a3 3 0 0 0-5.584-.953A1.993 1.993 0 0 0 8 6c-.532 0-1.016.208-1.375.547zM14 8a2 2 0 1 1-4 0 2 2 0 0 1 4 0z" />
-        </svg>
-        <div class="dropdown-content">
-          <a  href="aboutme.html">ABOUT ME </a>
-          <a href="portfolio.html">PORTFOLIO</a>
-          <a href="resume.html">RESUME</a>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
+    </nav>
+    <div class="container welcome">
+        <h2>Hello! I'm<span>JR,</span></h2>
+        <span class=text2>Take a Look Around</span>
+        <br>
+        <div class=dropdown>
+            <button class=dropbtn>
+                <svg xmlns=http://www.w3.org/2000/svg width=50 height=50 fill=currentColor class="bi bi-eyeglasses"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M4 6a2 2 0 1 1 0 4 2 2 0 0 1 0-4zm2.625.547a3 3 0 0 0-5.584.953H.5a.5.5 0 0 0 0 1h.541A3 3 0 0 0 7 8a1 1 0 0 1 2 0 3 3 0 0 0 5.959.5h.541a.5.5 0 0 0 0-1h-.541a3 3 0 0 0-5.584-.953A1.993 1.993 0 0 0 8 6c-.532 0-1.016.208-1.375.547zM14 8a2 2 0 1 1-4 0 2 2 0 0 1 4 0z" />
+                </svg>
+                <div class=dropdown-content>
+                    <a href=aboutme.html>ABOUT ME </a>
+                    <a href=portfolio.html>PORTFOLIO</a>
+                    <a href=resume.html>RESUME</a>
+                </div>
+            </button>
         </div>
-      </button>
     </div>
-
-  </div>
-  
-
 </body>
-
-<!--FOOTER  -->
-<footer class="footer text-center fixed-bottom mt-auto bg-info ">
-  <div class="mt-1 navbar-dark bg-light">
-    <footer class="footer-copyright my-auto bg-info">&#169 Copyright
-      <a class="navbar-brand bg-info" href="https://github.com/Jruuuu/">
-        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github icon" loading="lazy">
-      </a>
-      <a class="navbar-brand bg-info" href="https://www.linkedin.com/in/enrilo-ugalde">
-        <img src="assets/images/LI-In-Bug.png" alt="linkedin icon" loading="lazy">
-      </a>
-      <a class="navbar-brand bg-info" href="https://www.instagram.com/jruuuu/">
-        <img src="assets/images/Instagram.png" alt="instagram icon" loading="lazy">
-      </a>
-    </footer>
-  </div>
+<footer class="footer text-center fixed-bottom mt-auto bg-info">
+    <div class="mt-1 navbar-dark bg-light">
+        <footer class="footer-copyright my-auto bg-info">&#169 Copyright
+            <a class="navbar-brand bg-info" href=https://github.com/Jruuuu target="_blank">
+            <img src=assets/images/GitHub-Mark-Light-32px.png alt="github icon" loading=lazy>
+            </a>
+            <a class="navbar-brand bg-info" href=https://www.linkedin.com/in/enrilo-ugalde target="_blank">
+                <img src=assets/images/LI-In-Bug.png alt="linkedin icon" loading=lazy>
+            </a>
+            <a class="navbar-brand bg-info" href=https://www.instagram.com/jruuuu target="_blank"> 
+            <img src=assets/images/Instagram.png alt="instagram icon" loading=lazy>
+            </a>
+        </footer>
+    </div>
 </footer>
-
-
-
-
-
-
-<!-- is required for drop menus -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-
-
-
-
-
-
+<script src=https://code.jquery.com/jquery-3.5.1.slim.min.js
+    integrity=sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj crossorigin=anonymous></script>
+<script src=https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js
+    integrity=sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN crossorigin=anonymous></script>
+<script src=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js
+    integrity=sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV crossorigin=anonymous></script>
 
 </html>
