--- a/aboutme.html
+++ b/aboutme.html
@@ -96,13 +96,13 @@
 <footer class="footer text-center fixed-bottom mt-auto bg-info ">
   <div class="mt-1 navbar-dark bg-light">
     <footer class="footer-copyright my-auto bg-info">&#169 Copyright
-      <a class="navbar-brand bg-info" href="https://github.com/Jruuuu/">
+      <a class="navbar-brand bg-info" href="https://github.com/Jruuuu/"target="_blank">
         <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github icon" loading="lazy">
       </a>
-      <a class="navbar-brand bg-info" href="https://www.linkedin.com/in/enrilo-ugalde">
+      <a class="navbar-brand bg-info" href="https://www.linkedin.com/in/enrilo-ugalde"target="_blank">
         <img src="assets/images/LI-In-Bug.png" alt="linkedin icon" loading="lazy">
       </a>
-      <a class="navbar-brand bg-info" href="https://www.instagram.com/jruuuu/">
+      <a class="navbar-brand bg-info" href="https://www.instagram.com/jruuuu/"target="_blank">
         <img src="assets/images/Instagram.png" alt="instagram icon" loading="lazy">
       </a>
     </footer>
