--- a/portfolio.html
+++ b/portfolio.html
@@ -94,18 +94,20 @@
 </body>
 
 <!--FOOTER  -->
-<footer class="footer text-center fixed-bottom mt-auto bg-info ">
+<footer class="footer text-center fixed-bottom mt-auto bg-info">
   <div class="mt-1 navbar-dark bg-light">
-    <footer class="footer-copyright my-auto bg-info">&#169 Copyright
-      <a class="navbar-brand bg-info" href="https://github.com/Jruuuu/">
-        <img src="assets/images/GitHub-Mark-Light-32px.png" alt="github icon" loading="lazy">
-      </a>
-      <a class="navbar-brand bg-info" href="https://www.linkedin.com/in/enrilo-ugalde">
-        <img src="assets/images/LI-In-Bug.png" alt="linkedin icon" loading="lazy">
-      </a>
-      <a class="navbar-brand bg-info" href="https://www.instagram.com/jruuuu/">
-        <img src="assets/images/Instagram.png" alt="instagram icon" loading="lazy">
-      </a>
-    </footer>
+      <footer class="footer-copyright my-auto bg-info">&#169 Copyright
+          <a class="navbar-brand bg-info" href=https://github.com/Jruuuu target="_blank" rel="noopener">
+          <img src=assets/images/GitHub-Mark-Light-32px.png alt="github icon" loading=lazy>
+          </a>
+          <a class="navbar-brand bg-info" href=https://www.linkedin.com/in/enrilo-ugalde target="_blank"rel="noopener">
+              <img src=assets/images/LI-In-Bug.png alt="linkedin icon" loading=lazy>
+          </a>
+          <a class="navbar-brand bg-info" href=https://www.instagram.com/jruuuu target="_blank"rel="noopener"> 
+          <img src=assets/images/Instagram.png alt="instagram icon" loading=lazy>
+          </a>
+      </footer>
+  </div>
+</footer>
 
 </html>
