--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class=text2>Take a Look Around</span>
         <br>
         <div class=dropdown>
-            <button class=dropbtn>
+            <button class=dropbtn alt="drop down button">
                 <svg xmlns=http://www.w3.org/2000/svg width=50 height=50 fill=currentColor class="bi bi-eyeglasses"
                     viewBox="0 0 16 16">
                     <path
@@ -37,7 +37,7 @@
 </body>
 <footer class="footer text-center fixed-bottom mt-auto bg-info">
     <div class="mt-1 navbar-dark bg-light">
-        <footer class="footer-copyright my-auto bg-info">&#169 Copyright
+        <footer class="footer-copyright my-auto bg-info" alt="Copyright Symbol">&#169 Copyright
             <a class="navbar-brand bg-info" href=https://github.com/Jruuuu target="_blank" rel="noopener">
             <img src=assets/images/GitHub-Mark-Light-32px.png alt="github icon" loading=lazy>
             </a>
