made changes to footer and header color

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     </nav>
     <div class="container welcome">
         <h2>Hello! I'm<span>JR,</span></h2>
         <span class=text2>Take a Look Around</span>
         <br>
         <div class=dropdown>
-            <button class=dropbtn alt="drop down button">
+            <button class=dropbtn aria-label="Drop Down Button">
                 <svg xmlns=http://www.w3.org/2000/svg width=50 height=50 fill=currentColor class="bi bi-eyeglasses"
                     viewBox="0 0 16 16">
                     <path
@@ -35,9 +35,9 @@
         </div>
     </div>
 </body>
-<footer class="footer text-center fixed-bottom mt-auto bg-info">
+<footer class="footer text-center fixed-bottom mt-auto">
     <div class="mt-1 navbar-dark bg-light">
-        <footer class="footer-copyright my-auto bg-info" alt="Copyright Symbol">&#169 Copyright
+        <footer class="footer-copyright my-auto" alt="Copyright Symbol">&#169 Copyright
             <a class="navbar-brand bg-info" href=https://github.com/Jruuuu target="_blank" rel="noopener">
             <img src=assets/images/GitHub-Mark-Light-32px.png alt="github icon" loading=lazy>
             </a>
