--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <body>
   <title>RESUME</title>
   <!--NAVGATION BAR added ml-auto to have link on the right of the page -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <!--have to add style to overide color bg for navbar-brand-->
     <a class="navbar-brand" href="index.html">JR</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -80,9 +80,9 @@
 
 </body>
 <!--FOOTER  -->
-<footer class="footer text-center fixed-bottom mt-auto bg-info">
+<footer class="footer text-center fixed-bottom mt-auto">
   <div class="mt-1 navbar-dark bg-light">
-      <footer class="footer-copyright my-auto bg-info">&#169 Copyright
+      <footer class="footer-copyright my-auto">&#169 Copyright
           <a class="navbar-brand bg-info" href=https://github.com/Jruuuu target="_blank" rel="noopener">
           <img src=assets/images/GitHub-Mark-Light-32px.png alt="github icon" loading=lazy>
           </a>
